[add]: all country in contact country dropdown

--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
             you can too.
           </p>
           <div class="buttons">
-            <a href="pages/career.html" class="btn-outline">Dealintra Careers</a>
+            <a href="pages/career.html" class="btn-outline"
+              >Dealintra Careers</a
+            >
             <a href="pages/career.html" class="btn-fill">Explore</a>
           </div>
         </div>
@@ -242,7 +244,10 @@
         <div class="marquee">
           <div class="marquee-track">
             <div class="marquee-content">
-              <img src="assets/images/home/partener/dkRaj.png" alt="Dkraj Jewels" />
+              <img
+                src="assets/images/home/partener/dkRaj.png"
+                alt="Dkraj Jewels"
+              />
               <img
                 src="assets/images/home/partener/malkiatiLogo.png"
                 alt="Malkiati"
@@ -319,15 +324,15 @@
         <div class="footer-links">
           <ul>
             <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="#partners">Partners</a></li>
+            <!-- <li><a href="#partners">Partners</a></li> -->
             <li><a href="pages/product.html">Products</a></li>
             <li><a href="pages/service.html">Services</a></li>
           </ul>
           <ul>
             <li><a href="pages/career.html">Careers</a></li>
             <li><a href="pages/upcoming.html">Blogs</a></li>
-            <li><a href="pages/about.html#mentors">Mentors</a></li>
-            <li><a href="pages/upcoming.html">CSR</a></li>
+            <!-- <li><a href="pages/about.html#mentors">Mentors</a></li> -->
+            <li><a href="https://siaicon.com" target="_blank">CSR</a></li>
           </ul>
         </div>
 
@@ -365,14 +370,17 @@
 
             <div class="social-links">
               <span>Follow us</span>
+
+              <a href="mailto:contact.dealintra@gmail.com" target="_blank">
+                <i class="fa-regular fa-envelope"></i>
+              </a>
+
               <a
                 target="_blank"
                 href="https://www.linkedin.com/company/dealintra/"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <!-- <a target="_blank" href="https://www.facebook.com/"
-                ><i class="fab fa-facebook"></i
-              ></a> -->
+
               <a target="_blank" href="https://www.x.com/"
                 ><i class="fab fa-x-twitter"></i
               ></a>
