--- a/pages/career.html
+++ b/pages/career.html
@@ -61,7 +61,7 @@
       <section class="career-section" id="careerCardsSection">
         <div class="career-header">
           <h2>Current Openings</h2>
-          <button class="job-alert-btn">Create Job Alert 🔔</button>
+          <!-- <button class="job-alert-btn">Create Job Alert 🔔</button> -->
         </div>
 
         <div class="career-grid">
@@ -449,15 +449,15 @@
         <div class="footer-links">
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="../index.html#partners">Partners</a></li>
+            <!-- <li><a href="../index.html#partners">Partners</a></li> -->
             <li><a href="product.html">Products</a></li>
             <li><a href="service.html">Services</a></li>
           </ul>
           <ul>
             <li><a href="career.html">Careers</a></li>
             <li><a href="upcoming.html">Blogs</a></li>
-            <li><a href="about.html#mentors">Mentors</a></li>
-            <li><a href="upcoming.html">CSR</a></li>
+            <!-- <li><a href="about.html#mentors">Mentors</a></li> -->
+            <li><a href="https://siaicon.com" target="_blank">CSR</a></li>
           </ul>
         </div>
 
@@ -495,12 +495,13 @@
 
             <div class="social-links">
               <span>Follow us</span>
+              <a href="mailto:contact.dealintra@gmail.com" target="_blank">
+                <i class="fa-regular fa-envelope"></i>
+              </a>
               <a target="_blank" href="https://www.linkedin.com/"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a target="_blank" href="https://www.facebook.com/"
-                ><i class="fab fa-facebook"></i
-              ></a>
+
               <a target="_blank" href="https://www.x.com/"
                 ><i class="fab fa-x-twitter"></i
               ></a>
