[UPDATE-UI]: home client card horizontal scrollable on small screen

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <!-- clients Section -->
       <section class="testimonials">
         <h2>What our Clients says about us ?</h2>
+        <p class="swipe-hint">Swipe to see more →</p>
         <div class="testimonial-cards">
           <div class="card">
             <span class="quote">❝</span>
